# spin-test

./: .gitignore  Cargo.toml  Makefile  README.md  spin.toml
src/: lib.rs
